--- a/index.html
+++ b/index.html
@@ -1,1 +1,247 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="styles.css">
+		<title>FullStacked</title>
+	</head>
+	<body>
+		<div id="imgbg">
+			<header>
+				<div id="logo">
+					<a href="index.html">
+						<img src="/img/logo.png" alt="LOGO">
+					</a>
+				</div>
+				<div id="navbar">
+					<a href="#">Home</a>
+					<a href="#">About</a>
+					<a href="#">Play</a>
+				</div>
+			</header>
+			<main>
+				<section id="mainpart">
+					<div>
+						<h1> Get schooled </h1>
+						<p id="words"> SMILES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GRIN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LAUGH </p>
+						<button class="register"> REGISTER FOR FREE </button>
+					</div>
+					<div>
+						<h2 id="learn">
+							<b>Learn</b> from pros
+						</h2>
+						<div id="pros">
+							<div>
+								<img src="img/phillip.png" alt="image">
+								<h3>Phillip Massey</h3>
+								<P>"Smile of the year <br> 2018 - 2019 </P>
+							</div>
+							<div>
+								<img src="img/nannie.png" alt="image">
+								<h3>Nannie Lawrence</h3>
+								<P>Best "little smile" <br> 2017 </P>
+							</div>
+							<div>
+								<img src="img/bruce.png" alt="image">
+								<h3>Bruce Walters</h3>
+								<P>Best "Friend Smile" <br> live performance 2019 </P>
+							</div>
+							<div>
+								<img src="img/henry.png" alt="image">
+								<h3>Henry Hughes</h3>
+								<P>"24h smiles" winner <br> 2016 - 2019 </P>
+							</div>
+						</div>
+					</div>
+				</section>
+		</div>
+		<section id="quotesection">
+			<div id="quote">
+				<img src="/img/quote.png" alt="IMAGE" style="width: 160px;">
+				<div id="quotet">
+					<blockquote> «Those tutorials are concise and go straight to the point. I can’t think of a better <br> place to learn smiling. And it’s so fun! </blockquote>
+					<p>
+						<b>Person Name</b>
+					</p>
+					<p>
+						<i>weather presenter</i>
+					</p>
+				</div>
+			</div>
+		</section>
+		<section id="tuto">
+			<h1>Most <b style="color: #C271FF;">popular</b> tutorials </h1>
+			<div id="tutos">
+				<div class="choix">
+					<div>
+                            <div  class="parent">
+						        <img class="miniature" src="/img/diagonal.png" alt="IMAGE">
+                                <img class="play" src="/img/play.png" alt="">
+                            </div>
+                            <h2>Diagonal Smile</h2>
+						<p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+						<div class="author">
+							<img src="/img/phillip.png" alt="IMAGE">
+							<h3>Phillip Massey</h3>
+						</div>
+                        <div class="comment">
+                            <div class="star">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/unstar.png" alt="IMAGES">
+                            </div>
+						<p>8 min</p>
+                        </div>
+					</div>
+				</div>
+				<div class="choix">
+					<div>
+                        <div class="parent">
+                            <img class="miniature" src="/img/sad.png" alt="IMAGE">
+                            <img class="play" src="/img/play.png" alt="">
+                        </div>
+						<h2>Sad Smile</h2>
+						<p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+						<div  class="author">
+							<img src="/img/phillip.png" alt="IMAGE">
+							<h3>Phillip Massey</h3>
+						</div>
+                        <div class="comment">
+                            <div class="star">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/unstar.png" alt="IMAGES">
+                            </div>
+						<p>8 min</p>
+                        </div>
+					</div>
+				</div>
+				<div class="choix">
+					<div>
+                        <div class="parent">
+                            <img class="miniature" src="/img/natural.png" alt="IMAGE">
+                            <img class="play" src="/img/play.png" alt="">
+                        </div>
+						<h2>Natural Smile</h2>
+						<p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+						<div  class="author">
+							<img  src="/img/phillip.png" alt="IMAGE">
+							<h3>Phillip Massey</h3>
+						</div>
+                        <div class="comment">
+                            <div class="star">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/star.png" alt="IMAGES">
+                                <img src="/img/unstar.png" alt="IMAGES">
+                            </div>
+						<p>8 min</p>
+                        </div>
+					</div>
+				</div>
+				<div class="choix">
+					<div>
+                        <div class="parent">
+                            <img class="miniature" src="/img/happy.png" alt="IMAGE">
+                            <img class="play" src="/img/play.png" alt="">
+                        </div>
+						<h2>Happy Smile</h2>
+						<p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+						<div class="author">
+							<img  src="/img/phillip.png" alt="IMAGE">
+							<h3>Phillip Massey</h3>
+						</div>
+                        <div class="comment">
+						<div class="star">
+							<img src="/img/star.png" alt="IMAGES">
+							<img src="/img/star.png" alt="IMAGES">
+							<img src="/img/star.png" alt="IMAGES">
+							<img src="/img/star.png" alt="IMAGES">
+							<img src="/img/unstar.png" alt="IMAGES">
+						</div>
+						<p>8 min</p>
+                    </div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="ship">
+			<h1><b style="color: #C271FF;">Free</b> membership</h1>
+            <div class="dot">
+			<div class="avantages">
+				<img src="/img/purplesmile.png" alt="">
+				<h2> Lorem ipsum </h2>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</div>
+			<div class="avantages">
+				<img src="/img/purplesmile.png" alt="">
+				<h2> Lorem ipsum </h2>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</div>
+			<div class="avantages">
+				<img src="/img/purplesmile.png" alt="">
+				<h2> Lorem ipsum </h2>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</div>
+            <div class="avantages">
+				<img src="/img/purplesmile.png" alt="">
+				<h2> Lorem ipsum </h2>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</div>
+        </div>
+			<button class="register">REGISTER FOR FREE</button>
+		</section>
+		<section class="FAQ">
+			<h1> F.A.Q </h1>
+			<div>
+				<div id="firstq">
+					<div class="questions">
+						<h2>How does this work?</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="questions">
+						<h2>How does this work?</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+				<div id="secondq">
+					<div class="questions">
+						<h2>How does this work?</h2>
+						<p>TexLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.t</p>
+					</div>
+					<div class="questions">
+						<h2>How does this work?</h2>
+						<p>TexLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.t</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		</main>
+		<footer>
+			<div>
+				<div id="logofooter">
+					<img src="/img/logo.png" alt="Logo">
+				    <div id="socials">
+						<a href="">
+							<img src="/img/facebook.png" alt="Image">
+						</a>
+						<a href="">
+							<img src="/img/twitter.png" alt="Image">
+						</a>
+						<a href="">
+							<img src="/img/insta.png" alt="Image">
+						</a>
+					</div>
+					<p>©smileschool 2020</p>
+				</div>
+			</div>
+		</footer>
+	</body>
+</html>
